--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Sang-hyeok Jeong"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Goyang City, Gyeonggi-do Province, South Korea"
+  location         : "Seoul, South Korea"
   employer         : "Korea University"
   uri              : # URL
   email            : "nacl31566@korea.ac.kr" 
